Reviewed gap issue

--- a/src/scripts/OSUIFramework/Pattern/Carousel/scss/_carousel.scss
+++ b/src/scripts/OSUIFramework/Pattern/Carousel/scss/_carousel.scss
@@ -43,7 +43,12 @@
 		}
 	}
 
-	.osui-carousel_content {
+	.splide__list {
+		/* To avoid flickering with multiple items and gap 0*/
+		transform-style: flat;
+	}
+
+	.osui-carousel__content {
 		& > .list {
 			overflow: unset;
 
@@ -57,20 +62,6 @@
 	.splide--draggable,
 	&.splide--draggable {
 		cursor: grab;
-	}
-
-	.library-link {
-		// Service Studio Preview
-		& {
-			-servicestudio-background-color: var(--color-neutral-3);
-		}
-
-		// Service Studio Preview
-		&::before {
-			-servicestudio-color: var(--color-neutral-7);
-			-servicestudio-content: 'The Carousel uses an external library - Splide.js. For extended options or general documentation check the link below:';
-			-servicestudio-display: block;
-		}
 	}
 }
 
